--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#5B67CA</color> <!-- Blue for the "Sign In" button -->
+    <color name="text_color_primary">#FFFFFF</color>
+    <color name="text_color_secondary">#E0E0E0</color> <!-- A slightly off-white for subtitle -->
+    <color name="button_sign_up_background">#FFFFFF</color>
+    <color name="button_sign_up_text_color">#28293A</color> <!-- Or your preferred dark color -->
+    <color name="edit_text_hint_color">#A0A0A0</color>
+    <color name="edit_text_background_color">#F0F0F0</color>
+    <color name="terms_text_color">#8A8A8A</color>
 </resources>
