--- a/app/src/main/res/layout/signin_activity.xml
+++ b/app/src/main/res/layout/signin_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/app_bg"
     android:fillViewport="true"
-    tools:context=".SigninActivity">
+    tools:context=".SignInActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
