--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -59,6 +59,22 @@
         <item name="android:padding">16dp</item>
         <item name="android:background">@drawable/edit_text_bg</item> <!-- You'll need to create this drawable -->
         <item name="android:textColorHint">@color/edit_text_hint_color</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="OtpEditTextStyle">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@drawable/otp_input_background</item>
+        <item name="android:gravity">center</item>
+        <item name="android:inputType">number</item>
+        <item name="android:maxLength">1</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:hint">*</item>
+        <item name="android:textColorHint">@color/gray_400</item>
+        <item name="android:importantForAutofill">no</item>
+        <item name="android:digits">0123456789</item>
     </style>
 </resources>
