--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -62,6 +62,15 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="CommonPhoneEditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">60dp</item>
+        <item name="android:layout_marginEnd">60dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:background">@drawable/edit_text_bg</item> <!-- You'll need to create this drawable -->
+    </style>
+
     <style name="OtpEditTextStyle">
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
