--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -178,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/already_have_an_account"
-                    android:textColor="@color/text_color_secondary"
+                    android:textColor="@color/edit_text_hint_color"
                     android:textSize="19sp"
                     app:fontFamily="@font/roboto_regular" />
 
@@ -188,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:text="@string/sign_in"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/white"
                     android:textSize="19sp"
                     android:textStyle="bold"
                     app:fontFamily="@font/roboto_bold" />
